@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-12-19T16:11:07Z",
+  "timestamp" : "2023-12-20T08:10:25Z",
   "count_outdated" : 1514,
   "uniques_outdated" : 826,
-  "count" : 1530,
-  "uniques" : 835,
+  "count" : 1531,
+  "uniques" : 836,
   "clones" : [
     {
       "timestamp": "2023-12-11T00:00:00Z",
@@ -79,6 +79,15 @@
     },
     {
       "timestamp": "2023-12-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
