@@ -1,5 +1,5 @@
 {
-  "count": 16,
+  "count": 17,
   "uniques": 1,
   "clones": [
     {
@@ -44,6 +44,11 @@
     },
     {
       "timestamp": "2023-12-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
